--- a/contact.html
+++ b/contact.html
@@ -19,5 +19,12 @@
 
 	<h3>Contact</h3>
 
+	<!-- Map -->
+
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d6050.929428650187!2d-73.98411469090875!3d40.68576182310396!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1488435859960" width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+
+	<!-- Contact Form -->
+
 </body>
 </html>
