--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 	<head>
 		<!-- This is a comment. I can see it in the code, but it will not appear in the browser. -->
@@ -8,6 +9,7 @@
 		<meta charset="UTF-8">
 		<title>Exceptional Realty Group - Luxury Homes - About</title>
 	</head>
+	
 	<body>
 		<!-- The body is the entire viewable area of the web page. For example we can see text, links, images, and media. 
 		-->
@@ -41,7 +43,16 @@
 		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	<!-- Promo Video -->
+	<video controls>
+		<source src="videos/real-estate.mp4" type="video/mp4">
+		<source src="videos/real-estate.ogv" type="video/ogg">
 
+		Your browser does not support HTML5 video. 
+		<a href="http://browsehappy.com" target="_blank">Please upgrade your browser.</a>
+
+
+	</video>
 
 	</body>	
 
